--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,8 @@
         <textarea name="prompt" rows="1" cols="1" placeholders="Ask procoder..."></textarea>
         <button type="submit"><img src="assets\send.svg" /></button>
       </form>
+    </div>
+    
     <script type="module" src="script.js"></script>
   </body>
 </html>
