update the html code

--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,11 @@
       <div id="chat_container"></div>
 
       <form>
-        <textarea name="prompt" rows="1" cols="1" placeholders="Ask procoder..."></textarea>
+        <textarea name="prompt" rows="1" cols="1" placeholder="Ask procoder..."></textarea>
         <button type="submit"><img src="assets\send.svg" /></button>
       </form>
     </div>
-    
+
     <script type="module" src="script.js"></script>
   </body>
 </html>
